--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>test page</title>
-  <!-- <link rel="stylesheet" type="text/css" href="app/styles/styles.css"> -->
+  <link rel="stylesheet" type="text/css" href="app/public/css/styles.css">
 </head>
 <body>
   <div id="app-root"></div>
