--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+  <meta name="viewport" content="width=device-width">
+  <meta charset="utf-8">
   <title>test page</title>
   <link rel="stylesheet" type="text/css" href="app/public/css/styles.css">
 </head>
